# motion-planning

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
config/: arm_dimensions.json  obstacles.json
data_types/: CMakeLists.txt  arm_dimensions.cpp  arm_dimensions.hpp  arm_dimensions_test.cpp  edge.cpp  edge.hpp  edge_test.cpp  pose.cpp  pose.hpp  pose_points.cpp  pose_points.hpp  pose_points_test.cpp  pose_test.cpp  vec3.cpp  vec3.hpp  vec3_test.cpp
examples/: example_motion_plan.cpp
map/: CMakeLists.txt  map.cpp  map.hpp  map_test.cpp  node.cpp  node.hpp  node_comparator.cpp  node_comparator.hpp  node_test.cpp
obstacle/: CMakeLists.txt  obstacle.cpp  obstacle.hpp  obstacle_test.cpp
visualizer/: obstacle.py  path_visualizer.py  path_visualizer_test.py  requirements.txt
